--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <button class="btn btn-primary text-uppercase px-5 py-3 fs-5">Get Started</button>
                 <a href="#" class="ms-5 text-decoration-none border-bottom border-primary border-5">Get live demo</a>
                 <div class="my-5">
-                    <i class="fa-solid fa-circle-check text-primary me-2"><span class="ms-2 text-body">No credit card
+                    <i class="fa-solid fa-circle-check text-primary me-2 mb-2"><span class="ms-2 text-body">No credit card
                             required</span></i>
                     <i class="fa-solid fa-circle-check text-primary me-2"><span class="ms-2 text-body">No software to
                             install</span></i>
